tests/snapshots/spanshot_request@18431596585673661282.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_expr: ResetBindingMode, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[ref x]: &mut [T]`

[ref x] @ p: &mut [T]
// Applying rule `ConstructorRef`
ref x @ &mut (*p).0: &mut T
// Applying rule `Binding`
x @ &(*p).0: &T

// Final bindings:
let x: &T = &(*p).0
